<resources>
    <string name="app_name">Weather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="show_cast_for_7_days">show forecast for 7 days</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_locatin">select location Manually</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_loction">add location</string>
    <string name="Units">Units</string>
    <string name="kelvin">kelvin</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/h</string>
    <string name="km_hour">km/h</string>
    <string name="notification_s">notification sound</string>
    <string name="Alert_s">default Alert sound</string>
    <string name="none">mute</string>
    <string name="temp">Temperature</string>
    <string name="location">location</string>
    <string name="set_message">Set Home Using ...</string>
    <string name="GPS">GPS</string>
    <string name="FeelLike">Feel Like</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="hide_cast_for_7_days">hide forecast for 7 days</string>
    <string name="no_location">no location</string>
    <string name="there_is_no_data">there is no data please set home location from setting</string>
    <string name="weather_state">weather State</string>
    <string name="the_data_is_not_up_to_date">the data is not up to date please connect to internet to update</string>
    <string name="there_is_no_favourite_location">there is no favourite location</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="turnOn">turn on Alert</string>
    <string name="AlertSetting">Alert Setting</string>
    <string name="add_Alert">add Alert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clouds">clouds</string>
    <string name="select_weather_state">select weather state</string>
    <string name="select_alert_location">select Alert location</string>
    <string name="rain">Rain</string>
    <string name="temperature">Temperature</string>
    <string name="mist_fog_haze">Mist/Smoke/Haze/Dust/Fog/Sand/Squall/Tornado/Ash</string>
    <string name="snow">Snow</string>
    <string name="cloudiness">cloudiness</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="less_than">Less Than</string>
    <string name="more_than">More Than</string>
    <string name="description">description</string>
    <string name="choose_days_of_week">choose days of week</string>
    <string name="any_time">any time</string>
    <string name="period_of_time">Period of time</string>
    <string name="add_new_alert">add new Alert</string>
    <string name="from">start from hour</string>
    <string name="to">to</string>
    <string name="time">time</string>
    <string name="duration">duration of hours</string>
    <string name="alert_sound">Alert Sound</string>
    <string name="home_alert">Alert</string>
    <string name="choose_lang">choose language</string>
    <string name="arabic">العربيه</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="Drizzle">Drizzle</string>
    <string name="Mist">Mist</string>
    <string name="Smoke">Smoke</string>
    <string name="Haze">Haze</string>
    <string name="Dust">Dust</string>
    <string name="Fog">Fog</string>
    <string name="Sand">Sand</string>
    <string name="Ash">Ash</string>
    <string name="Squall">Squall</string>
    <string name="Tornado">Tornado</string>
    <string name="Clear">Clear</string>
    <string name="Clouds">Clouds</string>
    <string name="thunderstorm_with_light_rain">thunderstorm with light rain</string>
    <string name="thunderstorm_with_rain">thunderstorm with rain</string>
    <string name="thunderstorm_with_heavy_rain">thunderstorm with heavy rain</string>
    <string name="light_thunderstorm">light thunderstorm</string>
    <string name="heavy_thunderstorm">heavy thunderstorm</string>
    <string name="ragged_thunderstorm">ragged thunderstorm</string>
    <string name="thunderstorm_with_light_drizzle">thunderstorm with light drizzle</string>
    <string name="thunderstorm_with_drizzle">thunderstorm with drizzle</string>
    <string name="thunderstorm_with_heavy_drizzle">thunderstorm with heavy drizzle</string>
    <string name="light_intensity_drizzle">light intensity drizzle</string>
    <string name="heavy_intensity_drizzle">heavy intensity drizzle</string>
    <string name="light_intensity_drizzle_rain">light intensity drizzle rain</string>
    <string name="drizzle_rain">drizzle rain</string>
    <string name="heavy_intensity_drizzle_rain">heavy intensity drizzle rain</string>
    <string name="shower_rain_and_drizzle">shower rain and drizzle</string>
    <string name="heavy_shower_rain_and_drizzle">heavy shower rain and drizzle</string>
    <string name="shower_drizzle">shower drizzle</string>
    <string name="light_rain">light rain</string>
    <string name="moderate_rain">moderate rain</string>
    <string name="heavy_intensity_rain">heavy intensity rain</string>
    <string name="very_heavy_rain">very heavy rain</string>
    <string name="extreme_rain">extreme rain</string>
    <string name="freezing_rain">freezing rain</string>
    <string name="light_intensity_shower_rain">light intensity shower rain</string>
    <string name="shower_rain">shower rain</string>
    <string name="heavy_intensity_shower_rain">heavy intensity shower rain</string>
    <string name="ragged_shower_rain">ragged shower rain</string>
    <string name="light_snow">light snow</string>
    <string name="Heavy_snow">Heavy snow</string>
    <string name="Sleet">Sleet</string>
    <string name="Light_shower_sleet">Light shower sleet</string>
    <string name="Shower_sleet">Shower sleet</string>
    <string name="Light_rain_and_snow">Light rain and snow</string>
    <string name="Rain_and_snow">Rain and snow</string>
    <string name="Light_shower_snow">Light shower snow</string>
    <string name="Shower_snow">Shower snow</string>
    <string name="Heavy_shower_snow">Heavy shower snow</string>
    <string name="clear_sky">clear sky</string>
    <string name="few_clouds">few clouds</string>
    <string name="scattered_clouds">scattered clouds</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="overcast_clouds">overcast clouds</string>
    <string name="every">every</string>
    <string name="days_of_week">days of week</string>
    <string name="select_the_time">select the time</string>
    <string name="check">check condetion of</string>

</resources>