<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/recycler_background"
        tools:context=".alert.alertPref.AlertPref">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_new_alert"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/moreLessR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:checkedButton="@+id/moreThan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.808"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                android:id="@+id/LessThan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/less_than" />

            <RadioButton
                android:id="@+id/moreThan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/more_than" />

        </RadioGroup>

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:max="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.729"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreLessR" />

        <ca.antonious.materialdaypicker.MaterialDayPicker
            android:id="@+id/materialDayPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_des"
            app:layout_constraintVertical_bias="0.282" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/wind_speed"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintBottom_toBottomOf="@+id/numberPicker"
            app:layout_constraintEnd_toStartOf="@+id/numberPicker"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="71dp"
            android:layout_marginBottom="16dp"
            android:text="@string/choose_days_of_week"
            app:layout_constraintBottom_toTopOf="@+id/materialDayPicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_des"
            app:layout_constraintVertical_bias="0.627" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/edit_des"
            app:layout_constraintEnd_toEndOf="@+id/edit_des"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="@+id/edit_des"
            app:layout_constraintTop_toBottomOf="@+id/btn_from"
            app:layout_constraintVertical_bias="1.0" />

        <RadioGroup
            android:id="@+id/timeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="90dp"
            android:orientation="horizontal"
            android:checkedButton="@+id/anytime"
            app:layout_constraintBottom_toTopOf="@+id/edit_des"
            app:layout_constraintEnd_toStartOf="@+id/moreLessR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/anytime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/any_time" />

            <RadioButton
                android:id="@+id/period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/period_of_time" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="#00FFFFFF"
            android:text="@string/time"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/btn_to"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeRadio" />

        <NumberPicker
            android:id="@+id/btn_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="8dp"
            android:background="#00FFFFFF"
            android:text="@string/time"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/edit_des"
            app:layout_constraintEnd_toStartOf="@+id/numberPicker" />

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_from"
            app:layout_constraintEnd_toEndOf="@+id/btn_from"
            app:layout_constraintStart_toStartOf="@+id/btn_from" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/duration"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_to"
            app:layout_constraintEnd_toEndOf="@+id/btn_to"
            app:layout_constraintStart_toStartOf="@+id/btn_to"
            app:layout_constraintTop_toBottomOf="@+id/timeRadio"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/f_btn_add_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/check_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDayPicker"
            app:layout_constraintVertical_bias="0.157" />

        <TextView
            android:id="@+id/pre_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/numberPicker"
            app:layout_constraintStart_toEndOf="@+id/numberPicker"
            app:layout_constraintTop_toTopOf="@+id/numberPicker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
